# ursula-log-analyzer

./: CMakeLists.txt  README.md  checker_test.py  ursulalogcheck.c  ursulalogcheck.h
tester/: CMakeLists.txt  default.cfg  main.c
